[gd_scene load_steps=7 format=2]

[ext_resource path="res://Classes/StateMachine/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Game/Entities/MinersWife/States/Global/WifesGlobalState.gd" type="Script" id=2]
[ext_resource path="res://Game/Entities/MinersWife/States/VisitBathroom.gd" type="Script" id=3]
[ext_resource path="res://Game/Entities/MinersWife/MinersWife.gd" type="Script" id=4]
[ext_resource path="res://Game/Entities/MinersWife/States/DoHouseWork.gd" type="Script" id=5]
[ext_resource path="res://Game/Entities/MinersWife/States/CookStew.gd" type="Script" id=6]

[node name="MinersWife" type="Spatial"]
script = ExtResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Global" type="Node" parent="StateMachine"]

[node name="WifesGlobalState" type="Node" parent="StateMachine/Global"]
script = ExtResource( 2 )

[node name="States" type="Node" parent="StateMachine"]

[node name="DoHouseWork" type="Node" parent="StateMachine/States"]
script = ExtResource( 5 )

[node name="VisitBathroom" type="Node" parent="StateMachine/States"]
script = ExtResource( 3 )

[node name="CookStew" type="Node" parent="StateMachine/States"]
script = ExtResource( 6 )
